<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wizard_screen_1_header"
        android:background="@color/primaryColor"
        android:textSize="22dp"
        android:textColor="@color/primaryTextColor"
        android:gravity="fill_vertical"
        android:padding="18dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ws1_option"
            android:textColor="@color/colorPrimary"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/first"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rb_cover_options_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_cover_options_1"/>
            <RadioButton
                android:id="@+id/rb_cover_options_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_cover_options_2"/>
            <RadioButton
                android:id="@+id/rb_cover_options_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_cover_options_3"/>
            <RadioButton
                android:id="@+id/rb_cover_options_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_cover_options_4"/>

        </RadioGroup>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/cover_option_spnr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cover_options"
            style="@style/e_padding"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age in Years"
                android:inputType="number"
                android:textColor="@color/colorAccent"
                android:ems="10"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>